tests/machine/x/go/group_by_left_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_left_join.go:68:23: invalid operation: c (variable of struct type CustomersItem) is not an interface
../../../tests/machine/x/go/group_by_left_join.go:72:23: invalid operation: o (variable of struct type OrdersItem) is not an interface
../../../tests/machine/x/go/group_by_left_join.go:89:23: invalid operation: c (variable of struct type CustomersItem) is not an interface
../../../tests/machine/x/go/group_by_left_join.go:93:23: invalid operation: o (variable of struct type OrdersItem) is not an interface

1: //go:build ignore
